--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,38 @@
 body {
     background-color: rgb(255 255 255);
 }
+
+a {
+    color: #000;
+    font-family: arial, sans-serif;
+    font-size: 13px;
+    opacity: 0.75;
+    text-decoration: none;
+}
+
+.wrapper {
+    display: grid;
+    width: 100%;
+    height: 100%;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 60px 1fr auto;
+    grid-template-areas: 
+        "header header header"
+        "content content content"
+        "footer footer footer";
+}
+
+header {
+    grid-area: header;
+    display: flex;
+    justify-content: space-between;
+}
+
+main {
+    grid-area: content;
+}
+
+footer {
+    grid-area: footer;
+    background-color: rgb(242 242 242);
+}
