--- a/style/style.css
+++ b/style/style.css
@@ -115,21 +115,25 @@ main {
     grid-area: content;
     display: flex;
     flex-direction: column;
+    height: auto;
+   
 }
+
 
 .logo {
     display: flex;
-    min-height: 92px;
-    max-height: 290px;
-    height:  290px;
+    height: 100%;
     justify-content: center;
     align-items: flex-end;
+    max-height: 290px;
+    min-height: 90px;
 }
 
 .search-area-container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 20px;
 }
 
 .search-area-box {
@@ -137,7 +141,9 @@ main {
     flex-direction: row;
     align-items: center;
     height: 44px;
-    width: 584px;
+    width: 90%;
+    min-width: 395px;
+    max-width: 584px;
     border: 1px solid #dfe1e5;
     border-radius: 24px;
     margin: 20px 0;
@@ -191,6 +197,10 @@ main {
     box-shadow: 0 1px 1px rgba(0,0,0,.1);
     border: 1px solid #dadce0;
     color: #202124;
+}
+
+.content-spacer {
+    height: 100%;
 }
 
 /* Footer */
